[package]
name = "markov"
version = "0.1.0"
authors = ["Amanda Koh <amanda@naucera.net>"]
edition = "2018"
description = "A library for training Markov models and using them for prediction and generation."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "~0.7.3"